# cncnet-ladder-elo-computation

./: CMakeLists.txt  Dockerfile  README.md  blitzmap.cpp  blitzmap.h  cplusplus.h  databaseconnection.cpp  databaseconnection.h  entrypoint-cron.sh  faction.cpp  faction.h  game.cpp  game.h  gamemode.cpp  gamemode.h  gameoverlay.cpp  gameoverlay.h  gametype.cpp  gametype.h  knownplayers.cpp  knownplayers.h  logging.cpp  logging.h  main.cpp  mapstats.cpp  mapstats.h  options.cpp  options.h  player.cpp  player.h  players.cpp  players.h  probabilities.cpp  probabilities.h  rating.cpp  rating.h  stringtools.cpp  stringtools.h
.github/workflows/: cd.yml
data/: blitz_ra2_worldseries.json
